--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "joetannenbaum/chewie",
     "version": "0.1.8",
     "require": {
-        "laravel/prompts": "~0.1"
+        "laravel/prompts": "^0.1"
     },
     "require-dev": {
         "pestphp/pest": "^2.33",
